[package]
authors = ["Arnaud Taffanel <arnaud@bitcraze.io>"]
name = "cfloader"
version = "0.1.0"
edition = "2024"
description = "Crate to interface with the Over-the-Air bootloader of Crazyflie 2.x"
license = "MIT OR Apache-2.0"
keywords = ["crazyflie"]


[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
crazyradio = { version = "0.3.0", features = ["async", "shared_radio"] }
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
indicatif = "0.18"
